updated index.html and siteplan.html files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="styles/main.css" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/webp" href="week06 Project/images/favicon.webp" />
+  <link rel="icon" type="image/webp" href="images/favicon.webp" />
 </head>
 <body>
   <header>
@@ -45,8 +45,11 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 SmartHome Gadget Store | <a href="references.html">References</a></p>
-  </footer>
+  <p>&copy; 2025 SmartHome Gadget Store |
+    <a href="references.html">References</a> |
+    <a href="siteplan.html">Site Plan</a>
+  </p>
+</footer>
 
   <script src="scripts/main.js"></script>
 </body>
